fix: options dialog being too large on devices with high devicePixelRatio (closes #234)

--- a/addon/chrome/skin/app_version/all/preferences.css
+++ b/addon/chrome/skin/app_version/all/preferences.css
@@ -16,7 +16,7 @@ prefpane {
 }
 
 prefwindow > .paneDeckContainer {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 prefpane > .content-box {
